@startuml

title __CONTROLLER's Class Diagram__\n

  namespace springmongoapp.bookStore {
    namespace controller {
      class springmongoapp.bookStore.controller.BookController {
          + BookController()
          + add()
          + delete()
          + get()
          + update()
      }
    }
  }
  

  namespace springmongoapp.bookStore {
    namespace controller {
      class springmongoapp.bookStore.controller.CatalogController {
          + CatalogController()
          + getAll()
      }
    }
  }
  

  namespace springmongoapp.bookStore {
    namespace controller {
      class springmongoapp.bookStore.controller.HomeController {
          + index()
      }
    }
  }
  

  springmongoapp.bookStore.controller.BookController o-- springmongoapp.bookStore.service.BookService : service
  springmongoapp.bookStore.controller.CatalogController o-- springmongoapp.bookStore.service.BookService : service


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
